<?xml version="1.0" encoding="utf-8"?>
<resources>


    <!-- 自定义组件 -->
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载中....</string>

    <string name="d">图片描述</string>

    <string name="umeng_socialize_login">登录</string>

    <string name="app_name">入学宝典</string>
    <string name="tab_main">首页</string>
    <string name="tab_information">资讯</string>
    <string name="tab_recommended">志愿推荐</string>
    <string name="tab_consulting">问专家</string>
    <string name="tab_data">查询</string>
    <string name="universities_query">院校查询</string>
    <string name="fractional_line">院校历年分数查询</string>
    <string name="scores_list">地区分数线</string>
    <string name="search_by_position">按位次查历史录取院校</string>
    <string name="encyclopedia">高考百科</string>
    <string name="professional_query">专业查询</string>
    <string name="expert_lectures">专家讲座</string>
    <string name="tab_me">我</string>
    <string name="tab_experts_online">专家在线</string>
    <string name="tab_question_list">问题列表</string>
    <string name="btn_sure">确定</string>
    <string name="btn_cancle">取消</string>
    <string name="btn_clear">清空</string>
    <string name="btn_screening">筛选</string>
    <string name="btn_online_consulting">在线咨询</string>
    <string name="btn_goto_recommended">选择适合我的大学</string>
    <string name="main_news">今日头条</string>
    <string name="main_title">知分选大学</string>
    <string name="main_more">查看所有资讯</string>
    <string name="main_content">“心中只要充满阳光，走到哪里都充满希望”</string>
    <string name="me_personal_information">个人信息</string>
    <string name="me_to_share">一键分享</string>
    <string name="me_feedback">意见反馈</string>
    <string name="me_about">关于高考宝典</string>
    <string name="me_version_checking">版本检测</string>
    <string name="me_recommended">360手机助手下载</string>
    <string name="me_click_login">点击登录</string>
    <string name="me_order_quiry">订单查询</string>
    <string name="me_service">服务购买</string>
    <string name="payment_coupon">优惠券</string>
    <string name="payment_activecard">激活升学卡</string>
    <string name="payment_confirmorder">确认订单</string>
    <string name="me_v1">V4.0.0</string>
    <string name="recomend_title">志愿填报推荐系统</string>
    <string name="student_info">考生信息</string>
    <string name="save_info">首次设定后保存信息</string>
    <string name="student_origin">生源地</string>
    <string name="unlimited">不限</string>
    <string name="reference_batchline">参考批次</string>
    <string name="students_type">文理科</string>
    <string name="score">分数</string>
    <string name="usenums">(剩余修改次数：0次)</string>
    <string name="six_hundreds">600</string>

    <string name="news_content">全文内容</string>
    <string name="login_password">密码：</string>
    <string name="login_login">登 录</string>
    <string name="first_login">登录</string>
    <string name="auto_login">自动登录</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="forget">忘记密码</string>
    <string name="login_phone_hint">请输入手机号码</string>
    <string name="login_password_hint">请输入登录密码</string>
    <string name="login_register">还没有账号？</string>
    <string name="login_register_try">" 注册"</string>
    <string name="register">注册</string>
    <string name="verify">验证</string>
    <string name="next">下一步</string>
    <string name="log_off">退出登录</string>
    <string name="phone_num">手机号</string>
    <string name="place">地区</string>
    <string name="account_name">账户</string>
    <string name="account_nickname">昵称</string>
    <string name="account_management">账户管理</string>
    <string name="about_sxw">关于我们</string>
    <string name="feedback">意见反馈</string>
    <string name="change_password">修改密码</string>
    <string name="ready">完成</string>
    <string name="nicheng">请输入您的昵称</string>
    <string name="code_hint">请输入验证码</string>
    <string name="password_hint">请输入密码(1-16个字符)</string>
    <string name="old_password_hint">请输入原密码</string>
    <string name="new_password_hint">请输入新密码(1-16个字符)</string>
    <string name="new_password_again_hint">请再次输入新密码</string>
    <string name="password_again_hint">请再次输入密码</string>
    <string name="save_changed">保存修改</string>
    <string name="login_bangzhu">如何使用？请点击</string>
    <string name="login_bangzhu_try">" 帮助"</string>
    <string name="recommend_title">推荐大学列表</string>
    <string name="recommend_rate">录取几率</string>
    <string name="recommend_filter">筛选</string>
    <string name="recommend_paybtn_btn">购买此服务</string>

    <string name="about_gkbd">高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考
        高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考
        高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考
        高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考
        高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考
        高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考
        高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考
        高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考
        高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考
        高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考
        高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考
        高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考高考


    </string>
    <drawable name="list_press">@color/gray</drawable>
    <string name="app_2name">ShareSDK Test OneKeyShare</string>
</resources>
