<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="#fff0f0f0" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@color/skyblue" android:layout_width="fill_parent" android:layout_height="48.0dip">
        <ImageView android:id="@id/register_fanhui" android:layout_width="0.0dip" android:layout_height="30.0dip" android:layout_marginLeft="8.0dip" android:src="@drawable/navreturnbtn" android:layout_weight="1.0"
                   android:onClick="finish"/>
        <TextView android:textSize="19.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/tv_register_title" android:layout_width="0.0dip" android:layout_height="30.0dip" android:layout_marginLeft="8.0dip" android:text="@string/register" android:layout_weight="7.0" />
        <Button android:textSize="18.5sp" android:textColor="@color/skyblue" android:gravity="center" android:id="@id/btn_to_register" android:background="@drawable/navbtnbg" android:visibility="invisible" android:layout_width="50.0dip" android:layout_height="30.0dip" android:layout_marginRight="8.0dip" android:text="@string/register" />
    </LinearLayout>
    <ScrollView android:orientation="vertical" android:background="#fff0f0f0" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:gravity="center" android:orientation="vertical" android:background="@drawable/login_input_bg" android:layout_width="fill_parent" android:layout_height="150.0dip" android:layout_marginTop="16.0dip">
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="48.0dip">
                    <EditText android:textSize="19.0sp" android:textColor="@color/black" android:textColorHint="@color/onpress" android:gravity="center_vertical" android:id="@+id/et_nicheng" android:background="@null" android:paddingLeft="11.0dip" android:layout_width="@dimen/et_input_width" android:layout_height="fill_parent" android:hint="@string/nicheng" android:singleLine="true"  />
                    <ImageView android:id="@id/iv_delete3" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="12.0dip" android:src="@drawable/login_delete_btn" />
                </LinearLayout>
                <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/login_transverseline" />
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="48.0dip">
                    <EditText android:textSize="19.0sp" android:textColor="@color/black" android:textColorHint="@color/onpress" android:gravity="center_vertical" android:id="@+id/et_password" android:background="@null" android:paddingLeft="11.0dip" android:layout_width="@dimen/et_input_width" android:layout_height="fill_parent" android:hint="@string/password_hint" android:singleLine="true" android:maxLength="16" android:inputType="textPassword" />
                    <ImageView android:id="@id/iv_delete4" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="12.0dip" android:src="@drawable/login_delete_btn" />
                </LinearLayout>
                <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/login_transverseline" />
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="48.0dip">
                    <EditText android:textSize="19.0sp" android:textColor="@color/black" android:textColorHint="@color/onpress" android:gravity="center_vertical" android:id="@+id/et_password_again" android:background="@null" android:paddingLeft="11.0dip" android:layout_width="@dimen/et_input_width" android:layout_height="fill_parent" android:hint="@string/password_again_hint" android:singleLine="true" android:maxLength="16" android:inputType="textPassword" />
                    <ImageView android:id="@id/iv_delete5" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="12.0dip" android:src="@drawable/login_delete_btn" />
                </LinearLayout>
            </LinearLayout>
            <Button android:textSize="19.0sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/btn_register" android:background="@drawable/btn_press_all" android:layout_width="328.0dip" android:layout_height="48.0dip" android:layout_marginTop="20.0dip" android:text="@string/register"
                    android:onClick="zhuce"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>