<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="#fff0f0f0" android:layout_width="fill_parent" android:layout_height="fill_parent"
              xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/linearlayout">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/ll_title" android:background="@color/skyblue" android:layout_width="fill_parent" android:layout_height="48.0dip">
        <TextView android:textSize="19.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/tv_title" android:paddingRight="5.0dip" android:layout_width="0.0dip" android:layout_height="30.0dip" android:layout_marginLeft="8.0dip" android:text="@string/first_login" android:layout_weight="7.0" />
    </LinearLayout>
    <ScrollView android:orientation="vertical" android:background="#fff0f0f0" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:gravity="center" android:orientation="vertical" android:background="@drawable/login_input_bg" android:layout_width="fill_parent" android:layout_height="97.0dip" android:layout_marginTop="16.0dip">
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="48.0dip">
                    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="4.0dip" android:src="@drawable/login_user_icon" />
                    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="4.0dip" android:src="@drawable/login_verticalline" />
                    <EditText android:textSize="19.0sp" android:textColor="@color/black" android:textColorHint="@color/onpress" android:gravity="center_vertical" android:id="@+id/login_phone" android:background="@null" android:paddingLeft="11.0dip" android:layout_width="230.0dip" android:layout_height="fill_parent" android:hint="@string/login_phone_hint" android:singleLine="true" android:textCursorDrawable="@null" />
                    <ImageView android:id="@id/iv_delete1" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="12.0dip" android:src="@drawable/login_delete_btn" />
                </LinearLayout>
                <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/login_transverseline" />
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="48.0dip">
                    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="4.0dip" android:src="@drawable/login_pwd_icon" />
                    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="4.0dip" android:src="@drawable/login_verticalline" />
                    <EditText android:textSize="19.0sp" android:textColor="@color/black" android:textColorHint="@color/onpress" android:gravity="center_vertical" android:id="@+id/login_password" android:background="@null" android:paddingLeft="11.0dip" android:layout_width="230.0dip" android:layout_height="fill_parent" android:hint="@string/login_password_hint" android:singleLine="true" android:maxLength="16" android:inputType="textPassword" android:textCursorDrawable="@null" />
                    <ImageView android:id="@+id/iv_delete2" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="12.0dip" android:src="@drawable/login_delete_btn" />
                </LinearLayout>
            </LinearLayout>
            <Button android:textSize="19.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/btn_login" android:background="@drawable/btn_press_all" android:layout_width="328.0dip" android:layout_height="48.0dip" android:layout_marginTop="20.0dip" android:text="@string/first_login"
                    android:onClick="login"/>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip">
                <TextView android:textSize="14.0dip" android:textColor="@color/skyblue" android:gravity="left|center" android:id="@+id/tv_zhucezhanghao" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="16.0dip" android:text="注册账号" android:layout_weight="1.0"
                          android:clickable="true" android:onClick="zhucezhanghao"/>
                <CheckBox android:textSize="14.0dip" android:textColor="#ff666666" android:id="@id/login_check" android:visibility="invisible" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/auto_login" android:layout_weight="1.0" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>